--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     width: 200px;
     height: 200px;
     border: 1px solid black;
-    border-radius: 5px;
+    border-radius: 20px;
     margin: 5px;
     display: flex;
     padding: 1em;
@@ -30,10 +30,135 @@
     margin: auto;
 }
 
-.d2 {
+.die.d2 {
     flex-direction: column;
 }
 
-.d2 .dot:first-child {
-    align-self: flex-start;
+.d2 .dot:nth-child(1) {
+    margin-top: 0;
+    margin-left: 0;
+}
+
+.d2 .dot:nth-child(2) {
+    margin-bottom: 0;
+    margin-right: 0;
+}
+
+.die.d3 {
+    flex-direction: column;
+}
+
+.d3 .dot:nth-child(1) {
+    margin-left: 0;
+    margin-top: 0;
+}
+
+.d3 .dot:nth-child(3) {
+    margin-bottom: 0;
+    margin-right: 0;
+}
+.die.d4 {
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.d4 .dot {
+    margin: 33px;
+}
+
+.d4 .dot:nth-child(1) {
+    margin-top: 0;
+    margin-left: 0;
+}
+
+.d4 .dot:nth-child(2) {
+    margin-top: 0;
+    margin-right: 0;
+}
+
+.d4 .dot:nth-child(3) {
+    margin-bottom: 0;
+    margin-left: 0;
+    margin-top: 80px;
+}
+
+.d4 .dot:nth-child(4) {
+    margin-bottom: 0;
+    margin-right: 0;
+    margin-top: 80px;
+}
+
+.die.d5 {
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.d5 .dot {
+    margin: 33px;
+}
+
+.d5 .dot:nth-child(1) {
+    margin-top: 0;
+    margin-left: 0;
+}
+
+.d5 .dot:nth-child(2) {
+    margin-top: 0;
+    margin-right: 0;
+}
+
+.d5 .dot:nth-child(3) {
+    margin: 0;
+    margin: 10px 70px;
+}
+
+.d5 .dot:nth-child(4) {
+    margin-bottom: 0;
+    margin-left: 0;
+}
+
+.d5 .dot:nth-child(5) {
+    margin-bottom: 0;
+    margin-right: 0;
+}
+
+.die.d6 {
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.d6 .dot {
+    margin: 33px;
+}
+
+.d6 .dot:nth-child(1) {
+    margin-top: 0;
+    margin-left: 0;
+}
+
+.d6 .dot:nth-child(2) {
+    margin-top: 0;
+    margin-right: 0;
+}
+
+.d6 .dot:nth-child(3) {
+    margin-bottom: 10px;
+    margin-left: 0;
+    margin-top: 10px;
+}
+
+.d6 .dot:nth-child(4) {
+    margin-bottom: 10px;
+    margin-right: 0;
+    margin-top: 10px;
+}
+
+.d6 .dot:nth-child(5) {
+    margin-bottom: 0;
+    margin-left: 0;
+}
+
+.d6 .dot:nth-child(6) {
+    margin-bottom: 0;
+    margin-right: 0;
 }
